5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1758_1189.log
== TEST (2019-05-25 17:30:44) 
-- CODE:
v = input("")
print(replace(v).upper())
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(replace(v).upper())
NameError: name 'replace' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:31:37) 
-- CODE:
from numpy import*
v = input("")
print(replace(v).upper())
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:31:59) 
-- CODE:
from numpy import*
v = input("")
v = replace(v)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:32:42) 
-- CODE:
from numpy import*
v = input("")
print(v.replace().upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:34:20) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:36:05) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:38:34) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t2 = 0
t = -1
n = -size(v) -1
while n < t:
	a = a + v[t2] 
	t = t - 1
	t2 = t2 + 1
if (a == v):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 17:38:42) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t2 = 0
t = -1
n = -size(v) -1
while n < t:
	a = a + v[t2] 
	t = t - 1
	t2 = t2 + 1
if (a == v):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.533362
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
0
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:39:02) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t2 = 0
t = -1
n = -size(v) -1
while n < t:
	a = a + v[t2] 
	t = t - 1
	t2 = t2 + 1
if (a == v):
	print(1)
else:
	print(0)
print(a)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:39:41) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t2 = 0
t = -1
n = -size(v) -1
while n < t:
	a = a + v[t] 
	t = t - 1
	t2 = t2 + 1
if (a == v):
	print(1)
else:
	print(0)
print(a)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:40:47) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
v = v.replace(" ","")
a = ""
t2 = 0
t = -1
n = -size(v) -1
while n < t:
	a = a + v[t] 
	t = t - 1
	t2 = t2 + 1
if (a == v):
	print(1)
else:
	print(0)
print(a)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:41:19) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
v = v.replace(" ","")
a = ""
t2 = 0
t = -1
n = -size(v) -1
while n < t:
	a = a + v[t] 
	t = t - 1
	t2 = t2 + 1
if (a == v):
	print(1)
else:
	print(0)
print(a)
print(v)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:41:22) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
v = v.replace(" ","")
a = ""
t2 = 0
t = -1
n = -size(v) -1
while n < t:
	a = a + v[t] 
	t = t - 1
	t2 = t2 + 1
if (a == v):
	print(1)
else:
	print(0)
print(a)
print(v)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:43:29) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
v = v.replace(" ","")
a = ""
t = 0
while n < t:
	a = v[t] + a
	t = t + 1
if (a == v):
	print(1)
else:
	print(0)
print(a)
print(v)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:43:50) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
v = v.replace(" ","")
a = ""
t = 0
n = len(v)
while n < t:
	a = v[t] + a
	t = t + 1
if (a == v):
	print(1)
else:
	print(0)
print(a)
print(v)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:44:36) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
v = v.replace(" ","")
a = ""
t = 0
n = len(v)
while t > n:
	a = v[t] + a
	t = t + 1
if (a == v):
	print(1)
else:
	print(0)
print(a)
print(v)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:45:51) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
v = v.replace(" ","")
a = ""
t = 0
n = len(v)
while t > n:
	a = v[t] + a
	t = t + 1
if (a == v):
	print(1)
else:
	print(0)
print(a)
print(v)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:45:57) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
v = v.replace(" ","")
a = ""
t = 0
n = len(v)
while t > n:
	a = v[t] + a
	t = t + 1
if (a == v):
	print(1)
else:
	print(0)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:46:54) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
v = v.replace(" ","")
a = ""
t = 0
n = len(v)
while t > n:
	a = v[t] + a
	t = t + 1

	
#if (a == v):
#	print(1)
#else:
#	print(0)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:47:19) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
v = v.replace(" ","")
a = ""
t = 0
n = len(v)
while t > n:
	a = v[t] + a
	t = t + 1
	print(a)
	
#if (a == v):
#	print(1)
#else:
#	print(0)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:48:29) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
v = v.replace(" ","")
a = ""
t = 0
n = len(v)
t2 = -1
while t > n:
	a = a + v[t2]
	t = t + 1	
	t2 = t2 - 1
#if (a == v):
#	print(1)
#else:
#	print(0)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:49:16) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
t2 = -1
while t > n:
	a = a + v[t2]
	t = t + 1	
	t2 = t2 - 1
#if (a == v):
#	print(1)
#else:
#	print(0)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:49:31) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
t2 = -1
while t > n:
	a = a + v[t2]
	t = t + 1	
	t2 = t2 - 1
#if (a == v):
#	print(1)
#else:
#	print(0)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:49:38) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
t2 = -1
while t > n:
	a = a + v[t2]
	t = t + 1	
	t2 = t2 - 1
#if (a == v):
#	print(1)
#else:
#	print(0)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:49:53) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
t2 = -1
while t > n:
	a = a + v[t2]
	t = t + 1	
	t2 = t2 - 1
#if (a == v):
#	print(1)
#else:
#	print(0)
print(a)
print(v[1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:51:05) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:51:10) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:52:51) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
s = "abc"
a = ""
t = 0
while t < 2:
	a = s[t] + a
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:53:05) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
s = "abc"
a = ""
t = 0
while t < 2:
	a = s[t] + a
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:53:21) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
s = "abc"
a = ""
t = 0
while t < 2:
	a = s[t] + a
	t = t + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:53:35) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
s = "abc"
a = ""
t = 0
while t < 3:
	a = s[t] + a
	t = t + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:53:52) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
while t < 3:
	a = v[t] + a
	t = t + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:57:00) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
while t < 3:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
if (a == v):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:57:18) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
while t < 3:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
if (a == v):
	print(1)
else:
	print(0)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:57:54) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
v = v.replace(" ", "")
a = ""
t = 0
while t < 3:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
if (a == v):
	print(1)
else:
	print(0)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 17:58:30) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
if (a == v):
	print(1)
else:
	print(0)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:00:38) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
t = 0
n1 = 0
while t < n:	
	if (a == v):
		n1 = n1 + 1
		t = t + 1
	t = t + 1
if n1 == n:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:01:20) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
t = 0
n1 = 0
while t < n:	
	if (a[t] == v[t]):
		n1 = n1 + 1
		t = t + 1
	t = t + 1
if n1 == n:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:01:54) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
a = str(a)
t = 0
n1 = 0
while t < n:	
	if (a[t] == v[t]):
		n1 = n1 + 1
		t = t + 1
	t = t + 1
if n1 == n:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:02:31) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
a = str(a)
t = 0
n1 = 0
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:02:47) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
a = str(a)
t = 0
n1 = 0
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:03:06) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
a = str(a)
t = 0
n1 = 0
print(a==v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:03:12) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
a = str(a)
t = 0
n1 = 0
print(a==v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:03:22) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
a = str(a)
t = 0
n1 = 0
print(a==v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:03:47) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
a = str(a)
if v==a:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:03:51) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
a = str(a)
if v==a:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:04:21) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
a = str(a)
if v==a:
	print(1)
else:
	print(0)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:04:29) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
a = str(a)
if v==a:
	print(1)
else:
	print(0)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 18:05:27) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
a = str(a)
v = v.replace(" ", "")
if v==a:
	print(1)
else:
	print(0)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 18:06:01) 
-- CODE:
from numpy import*
v = input("str: ").upper()
print(v.replace(" ",""))
a = ""
t = 0
n = len(v)
while t < n:
	a = v[t] + a
	t = t + 1
a = a.replace(" ", "")
a = str(a)
v = v.replace(" ", "")
if v==a:
	print(1)
else:
	print(0)

-- EXECUTION TIME:
0.472237
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
